--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
             <div class="btn delete" data-action="delete">DEL</div>
             <div class="btn operator" data-action="operator">÷</div>
             <div class="btn operator" data-action="operator">×</div>
-            <div class="btn" data-action="7">7</div>
-            <div class="btn" data-action="8">8</div>
-            <div class="btn" data-action="9">9</div>
+            <div class="btn">7</div>
+            <div class="btn">8</div>
+            <div class="btn">9</div>
             <div class="btn operator" data-action="-">-</div>
-            <div class="btn" data-action="4">4</div>
-            <div class="btn" data-action="5">5</div>
-            <div class="btn" data-action="6">6</div>
+            <div class="btn" >4</div>
+            <div class="btn" >5</div>
+            <div class="btn" >6</div>
             <div class="btn operator" data-action="operator">+</div>
-            <div class="btn" data-action="1">1</div>
-            <div class="btn" data-action="2">2</div>
-            <div class="btn" data-action="3">3</div>
+            <div class="btn" >1</div>
+            <div class="btn" >2</div>
+            <div class="btn" >3</div>
             <div class="btn equal" data-action="=">=</div>
-            <div class="btn zero" data-action="0">0</div>
+            <div class="btn zero" >0</div>
             <div class="btn" data-action=".">.</div>
         </div>
 
