--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="btn" >3</div>
             <div class="btn equal" data-action="=">=</div>
             <div class="btn zero" >0</div>
-            <div class="btn" data-action=".">.</div>
+            <div class="btn">.</div>
         </div>
 
 
