--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="buttons">
             <div class="btn clear" data-action="clear">AC</div>
             <div class="btn delete" data-action="delete">DEL</div>
-            <div class="btn operator" data-action="operator">÷</div>
-            <div class="btn operator" data-action="operator">×</div>
+            <div class="btn operator" >/</div>
+            <div class="btn operator">*</div>
             <div class="btn">7</div>
             <div class="btn">8</div>
             <div class="btn">9</div>
-            <div class="btn operator" data-action="-">-</div>
+            <div class="btn operator">-</div>
             <div class="btn" >4</div>
             <div class="btn" >5</div>
             <div class="btn" >6</div>
-            <div class="btn operator" data-action="operator">+</div>
+            <div class="btn operator" >+</div>
             <div class="btn" >1</div>
             <div class="btn" >2</div>
             <div class="btn" >3</div>
