--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="buttons">
             <div class="btn clear" data-action="clear">AC</div>
             <div class="btn delete" data-action="delete">DEL</div>
-            <div class="btn operator" >/</div>
-            <div class="btn operator">*</div>
+            <div class="btn operator" data-action="÷">÷</div>
+            <div class="btn operator" data-action="×">×</div>
             <div class="btn">7</div>
             <div class="btn">8</div>
             <div class="btn">9</div>
