--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <div class="btn">7</div>
             <div class="btn">8</div>
             <div class="btn">9</div>
-            <div class="btn operator">-</div>
+            <div class="btn operator" data-action="-">-</div>
             <div class="btn" >4</div>
             <div class="btn" >5</div>
             <div class="btn" >6</div>
-            <div class="btn operator" >+</div>
+            <div class="btn operator" data-action="+">+</div>
             <div class="btn" >1</div>
             <div class="btn" >2</div>
             <div class="btn" >3</div>
             <div class="btn equal" data-action="=">=</div>
-            <div class="btn zero" >0</div>
+            <div class="btn" >0</div>
             <div class="btn">.</div>
         </div>
 
