--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="btn" >2</div>
             <div class="btn" >3</div>
             <div class="btn equal" data-action="=">=</div>
-            <div class="btn" >0</div>
+            <div class="btn zero" >0</div>
             <div class="btn">.</div>
         </div>
 
